# c4py

./: .dockerignore  .env  README.md  docker-compose.yaml  pyproject.toml
api/config/: asgi.py  settings.py  urls.py  wsgi.py
api/screenshot_service/: apps.py  celery.py  models.py  serializers.py  tasks.py  views.py
api/screenshot_service/migrations/: 0001_initial.py
api/stats/: apps.py  serializers.py  views.py
api/users/: apps.py  models.py  serializers.py  views.py
api/users/migrations/: 0001_initial.py
api/utils/: screenshots.py  whois.py
bot/: config.py  keyboards.py  main.py  misc.py  model.py
bot/handlers/: commands.py  filters.py  keyboard_handlers.py
bot/keyboards/: callbacks.py  keyboards.py
bot/middlewares/: create_user.py  create_user_middleware.py  language.py  language_middleware.py
bot/utils/: answers.json  connector.py  extra.py  translate.py
docker/api/: Dockerfile  start-web.sh
docker/bot/: Dockerfile  start-bot.sh
truepositive_test_task/: manage.py
truepositive_test_task/config/: asgi.py  settings.py  urls.py  wsgi.py
truepositive_test_task/screenshot_service/: apps.py  models.py  views.py
truepositive_test_task/user/: models.py  views.py
truepositive_test_task/utils/: screenshots.py
