[tool.poetry]
name = "truepositive-test-task"
version = "0.1.0"
description = "Poetry зависимости для каждого из контейнеров: api, bot"
authors = ["valiaisnotprogrammer <ValiaChernykh@yandex.ru>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.api.dependencies]
django = "^5.0.4"
djangorestframework = "^3.15.1"
selenium = "^4.20.0"
psycopg2-binary = "^2.9.9"
python-whois = "^0.9.4"
drf-yasg = "^1.21.7"
celery = "^5.4.0"
pillow = "^10.3.0"
chromedriver-binary = "^126.0.6449.0.0"
chromedriver-autoinstaller = "^0.6.4"


[tool.poetry.group.bot.dependencies]
aiogram = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
